@@ -8,6 +8,9 @@ import kr.hhplus.be.server.domain.port.storage.ProductRepositoryPort;
 import kr.hhplus.be.server.domain.port.storage.OrderRepositoryPort;
 import kr.hhplus.be.server.domain.port.storage.OrderItemRepositoryPort;
 import kr.hhplus.be.server.domain.port.storage.EventLogRepositoryPort;
+import kr.hhplus.be.server.domain.port.cache.CachePort;
+import kr.hhplus.be.server.common.util.KeyGenerator;
+import kr.hhplus.be.server.domain.enums.CacheTTL;
 import kr.hhplus.be.server.domain.exception.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,7 +20,6 @@ import kr.hhplus.be.server.domain.dto.ProductQuantityDto;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -28,6 +30,8 @@ public class CreateOrderUseCase {
     private final ProductRepositoryPort productRepositoryPort;
     private final OrderRepositoryPort orderRepositoryPort;
     private final OrderItemRepositoryPort orderItemRepositoryPort;
+    private final CachePort cachePort;
+    private final KeyGenerator keyGenerator;
 
     /**
      * 주문을 생성하고 상품 재고를 예약
@@ -47,13 +51,13 @@ public class CreateOrderUseCase {
 
             List<Long> productIds = productQuantities.stream()
                     .map(ProductQuantityDto::getProductId)
-                    .collect(Collectors.toList());
+                    .toList();
             
             List<Product> products = productRepositoryPort.findByIds(productIds);
             Map<Long, Product> productMap = products.stream()
-                    .collect(Collectors.toMap(Product::getId, product -> product));
+                    .collect(java.util.stream.Collectors.toMap(Product::getId, product -> product));
             
-            List<OrderItem> orderItems = productQuantities.stream()
+            var orderItems = productQuantities.stream()
                     .map(productQuantity -> {
                         Long productId = productQuantity.getProductId();
                         Integer quantity = productQuantity.getQuantity();
@@ -75,7 +79,7 @@ public class CreateOrderUseCase {
                                 .quantity(quantity)
                                 .price(product.getPrice())
                                 .build();
-                    }).collect(Collectors.toList());
+                    }).toList();
 
             BigDecimal totalAmount = orderItems.stream()
                     .map(item -> item.getPrice().multiply(new BigDecimal(item.getQuantity())))
@@ -90,12 +94,27 @@ public class CreateOrderUseCase {
             
             List<OrderItem> orderItemsWithOrderId = orderItems.stream()
                     .map(item -> item.withOrderId(savedOrder.getId()))
-                    .collect(Collectors.toList());
+                    .toList();
             
             orderItemRepositoryPort.saveAll(orderItemsWithOrderId);
             
             log.debug("OrderItem 배치 저장 완료: orderId={}, itemCount={}", 
                     savedOrder.getId(), orderItemsWithOrderId.size());
+            
+            // Write-Through: 생성된 주문을 캐시에 저장
+            try {
+                String cacheKey = keyGenerator.generateOrderCacheKey(savedOrder.getId());
+                cachePort.put(cacheKey, savedOrder, CacheTTL.ORDER_DETAIL.getSeconds());
+                log.debug("주문 캐시 저장 완료: orderId={}", savedOrder.getId());
+                
+                // 주문 목록 캐시 무효화
+                String pattern = keyGenerator.generateOrderListCachePattern(userId);
+                cachePort.evictByPattern(pattern);
+                log.debug("주문 목록 캐시 무효화 완료: userId={}", userId);
+            } catch (Exception e) {
+                log.warn("주문 캐시 처리 실패: orderId={}, userId={}", savedOrder.getId(), userId, e);
+                // 캐시 오류는 비즈니스 로직에 영향을 주지 않음
+            }
             
             log.info("주문 생성 완료: orderId={}, userId={}, totalAmount={}, itemCount={}", 
                     savedOrder.getId(), userId, totalAmount, orderItems.size());
